# hello-inline-hook

./: .gitignore  README.md
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hello-inline-hook.c
app/src/main/cpp/inlinehook/: hooktest.c  hooktest.h
app/src/main/java/com/example/hellojni/: HelloInlineHook.java  HelloInlineHookActivity.java
app/src/main/res/layout/: activity_hello_inline_hook.xml
app/src/main/res/values/: strings.xml
